
[workspace]

members = [
    "ALDS1/alds_1_1_a",
    "ALDS1/alds_1_1_d",
    "ALDS1/alds_1_2_a",
    "ALDS1/alds_1_2_b",
    "ALDS1/alds_1_2_c",
    "ALDS1/alds_1_2_d",
    "ALDS1/alds_1_3_a",
    "ALDS1/alds_1_3_b",
    "ALDS1/alds_1_3_c",
    "ALDS1/alds_1_3_d",
    "ALDS1/alds_1_4_a",
    "ALDS1/alds_1_4_b",
    "ALDS1/alds_1_4_c",
    "ALDS1/alds_1_4_d",
    "ALDS1/alds_1_5_a",
    "ALDS1/alds_1_5_b",
    "ALDS1/alds_1_5_c",
    "ALDS1/alds_1_6_b",
    "ALDS1/alds_1_6_c",
]
