
[workspace]

members = [
    "ALDS1/alds_1_1_a",
    "ALDS1/alds_1_1_d",
    "ALDS1/alds_1_2_a",
    "ALDS1/alds_1_2_b",
    "ALDS1/alds_1_2_c",
    "ALDS1/alds_1_2_d",
    "ALDS1/alds_1_3_a",
    "ALDS1/alds_1_3_b",
    "ALDS1/alds_1_3_c",
    "ALDS1/alds_1_3_d",
    "ALDS1/alds_1_4_a",
    "ALDS1/alds_1_4_b",
    "ALDS1/alds_1_4_c",
    "ALDS1/alds_1_4_d",
    "ALDS1/alds_1_5_a",
    "ALDS1/alds_1_5_b",
    "ALDS1/alds_1_5_c",
    "ALDS1/alds_1_5_d",
    "ALDS1/alds_1_6_a",
    "ALDS1/alds_1_6_b",
    "ALDS1/alds_1_6_c",
    "ALDS1/alds_1_6_d",
    "ALDS1/alds_1_7_a",
    "ALDS1/alds_1_7_b",
    "ALDS1/alds_1_7_c",
    "ALDS1/alds_1_7_d",
    "ALDS1/alds_1_8_a",
    "ALDS1/alds_1_8_b",
    "ALDS1/alds_1_8_c",
    "ALDS1/alds_1_9_a",
    "ALDS1/alds_1_9_b",
    "ALDS1/alds_1_9_c",
    "ALDS1/alds_1_10_a",
    "ALDS1/alds_1_10_b",
    "ALDS1/alds_1_10_c",
    "ALDS1/alds_1_11_a",
    "ALDS1/alds_1_11_b",
    "ALDS1/alds_1_11_c",
    "ALDS1/alds_1_11_d",
    "ALDS1/alds_1_12_a",
    "ALDS1/alds_1_12_b",
    "ALDS1/alds_1_12_c",
]
