
[workspace]

members = [
    "ALDS/alds_1_1_a",
    "ALDS/alds_1_1_d",
    "ALDS/alds_1_2_a",
    "ALDS/alds_1_2_b",
    "ALDS/alds_1_2_c",
    "ALDS/alds_1_2_d",
    "ALDS/alds_1_3_a",
    "ALDS/alds_1_3_b",
    "ALDS/alds_1_3_c",
    "ALDS/alds_1_3_d",
    "ALDS/alds_1_4_a",
    "ALDS/alds_1_4_b",
    "ALDS/alds_1_4_c",
    "ALDS/alds_1_4_d",
    "ALDS/alds_1_5_a",
    "ALDS/alds_1_5_b",
    "ALDS/alds_1_5_c",
    "ALDS/alds_1_5_d",
    "ALDS/alds_1_6_a",
    "ALDS/alds_1_6_b",
    "ALDS/alds_1_6_c",
    "ALDS/alds_1_6_d",
    "ALDS/alds_1_7_a",
    "ALDS/alds_1_7_b",
    "ALDS/alds_1_7_c",
    "ALDS/alds_1_7_d",
    "ALDS/alds_1_8_a",
    "ALDS/alds_1_8_b",
    "ALDS/alds_1_8_c",
    "ALDS/alds_1_9_a",
    "ALDS/alds_1_9_b",
    "ALDS/alds_1_9_c",
    "ALDS/alds_1_10_a",
    "ALDS/alds_1_10_b",
    "ALDS/alds_1_10_c",
    "ALDS/alds_1_11_a",
    "ALDS/alds_1_11_b",
    "ALDS/alds_1_11_c",
    "ALDS/alds_1_11_d",
    "ALDS/alds_1_12_a",
    "ALDS/alds_1_12_b",
    "ALDS/alds_1_12_c",
    "DSL/dsl_1_a",
    "DSL/dsl_2_c",
    "GRL/grl_1_c",
    "GRL/grl_2_a",
    "GRL/grl_3_a",
    "GRL/grl_4_b",
    "GRL/grl_5_a",
    "CGL/cgl_1_a",
    "CGL/cgl_1_b",
    "CGL/cgl_1_c",
    "CGL/cgl_2_a",
    "CGL/cgl_2_b",
    "CGL/cgl_2_c",
    "CGL/cgl_2_d",
    "CGL/cgl_3_c",
    "CGL/cgl_4_a",
    "CGL/cgl_6_a",
    "CGL/cgl_7_d",
    "CGL/cgl_7_e",
    "DPL/dpl_1_a",
    "DPL/dpl_1_b",
    "DPL/dpl_1_d",
    "DPL/dpl_3_a",
]
